--- a/orgChart-Plugin/example.html
+++ b/orgChart-Plugin/example.html
@@ -50,14 +50,14 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
     <script type="text/javascript" src="jquery.orgchart.js"></script>
     <script type="text/javascript">
     var testData = [
-        {id: 1, name: 'My Organization', parent: 0},
-        {id: 2, name: 'CEO Office', parent: 1},
-        {id: 3, name: 'Division 1', parent: 1},
-        {id: 4, name: 'Division 2', parent: 1},
-        {id: 6, name: 'Division 3', parent: 1},
-        {id: 7, name: 'Division 4', parent: 1},
-        {id: 8, name: 'Division 5', parent: 1},
-        {id: 5, name: 'Sub Division', parent: 3},
+        {id: 1, name: 'My Organization', url: 'http://teste.comdjkfhlskjfhldskjfhlsdkjfhsdlkjfhsdlkjfhsldkj', parent: 0},
+        {id: 2, name: 'CEO Office', url: 'http://teste.com', parent: 1},
+        {id: 3, name: 'Division 1', url: 'http://teste.com', parent: 1},
+        {id: 4, name: 'Division 2', url: 'http://teste.com', parent: 1},
+        {id: 6, name: 'Division 3', url: 'http://teste.com', parent: 1},
+        {id: 7, name: 'Division 4', url: 'http://teste.com', parent: 1},
+        {id: 8, name: 'Division 5', url: 'http://teste.com', parent: 1},
+        {id: 5, name: 'Sub Division', url: 'http://teste.com', parent: 3},
         
     ];
     $(function(){
